# blog

./: .gitignore  Andrey's Notes on Everything.url  Note.md  Obsidian.lnk  Shortcodes.txt  SyncHome.cmd  build&launch.cmd  build.cmd  config.toml  doc.md  frontmatter.json  gitu.txt  launch+drafts.cmd  new.cmd  pagefind_cl.txt  render-blockquote.bak  sync.cmd
.obsidian/: workspace.json
content/: 2024-06-03-content.md  Soft.md  Untitled 1.vi  about.md  books.md  info.md  notes.md  search.bak  search.md  soft2026.md  weather.bak  weather.md
data/: carousel.yaml  carousel2.yaml  carousel3.yaml  carousel4.yaml
drafts/: 0019-abstractions.md  Arduino Code.md  Essential .CPL Commands.md  HowToDebug.7z  TiobeIndex May20024.md  abstract-abstractions.md  abstract-bench.7z  algorithms.md  city.md  egui-test.7z  test.md  the mystery of the while(1); and for(;;);.md
public/: 404.html  index.html  index.xml  sitemap.xml
snippets/: PerfCounterExperiment02 7700.vi  determine rtdsc freq 7700.vi  determine rtdsc freq.vi
static/rust_egui_35_1/: Cargo.toml
static/rust_egui_35_1/src/: lib.rs  lib.v03BAD  lib.v04OK_BAD
static/rust_leptos/: Cargo.toml  build.cmd
static/rust_leptos/pkg/: package.json  rust_leptos.d.ts  rust_leptos.js  rust_leptos_bg.wasm  rust_leptos_bg.wasm.d.ts
static/rust_leptos/src/: lib.rs
static/rust_weather/: Cargo.toml  Cargo.v01BAD
static/rust_weather/pkg/: hello_wasm.js  hello_wasm_bg.wasm  hello_weather.d.ts  hello_weather.js  hello_weather_bg.wasm  hello_weather_bg.wasm.d.ts  package.json
static/rust_weather/src/: lib.rs  lib.v01BAD
(+1692 files in other folders)
