[package]
name = "rust_hello"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
egui = "0.35.0"
wasm-bindgen-futures = "0.4.76"
wasm-bindgen = "0.2.126"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.103", features = ["Window", "Performance"] }
gloo-timers = { version = "0.4.0", features = ["futures"] }
eframe = "0.35.0"
